# cc-code-history-tidy

./: .gitignore  README.md  pyproject.toml
cc_history_tidy/: account_config.py  account_identity.py  backup.py  code_groups.py  group_labels.py  gui.py  i18n.py  leveldb_writer.py  main.py  migrator.py  models.py  paths.py  processes.py  scanner.py  session_tree.py  tree_state.py
docs/: release-notes-v0.2.0.md
docs/superpowers/plans/: 2026-07-03-claude-desktop-code-migrator.md  2026-07-03-clipboard-interaction.md  2026-07-03-group-clipboard-undo-i18n.md
docs/superpowers/specs/: 2026-07-03-clipboard-interaction-design.md  2026-07-03-group-clipboard-undo-i18n-design.md
examples/: account-groups.example.json
scripts/: build_exe.ps1  sync_layout_to_localstorage.py
tests/: conftest.py  fixtures.py  test_account_config.py  test_account_labels.py  test_backup.py  test_code_groups.py  test_code_groups_localstorage.py  test_code_groups_save.py  test_group_clipboard.py  test_group_labels.py  test_gui_clipboard_execute.py  test_gui_multiroot.py  test_gui_smoke.py  test_i18n.py  test_import.py  test_leveldb_writer.py  test_localstorage_integration.py  test_migrator.py  test_models.py  test_paths.py  test_paths_selection.py  test_processes.py  test_review_regressions.py  test_scanner.py  test_session_tree_clipboard.py  test_tree_undo.py  test_ui_polish.py
